# mexa

./: .gitignore  LICENSE  README.md  setup.cfg
mexa/: examples.py  expr.py  util.py
src/mexa/: __init__.py  examples.py  util.py
