[metadata]
name = mexa
version = 0.1.0
description = Math EXpression Abstraction
author = Marcio Dantas
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    mexa
python_requires = >=3.9
package_dir =
    =src
zip_safe = no